--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   intl: ^0.17.0
   mocktail_image_network: ^0.3.1
   provider: ^6.0.2
+  firebase_core: ^1.12.0
+  firebase_database: ^9.0.6
 
 dev_dependencies:
   flutter_lints: ^1.0.0
